统一 Agent 工具协议与实时执行界面